fix: add overflow hidden

--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
     padding-bottom: 0px;
     color:#ffcac8;
 }
+.clink:hover{
+    color:#ffffff;
+}
 .wrapper{
     display: block;
     max-width: 1020px;
@@ -60,6 +63,7 @@ p{
 }
 .ptfl{
     padding-top:5px;
+    overflow: hidden;
 }
 .npad{
     padding-left:0px;
@@ -94,6 +98,7 @@ p{
 .twp{
     padding-top: 16px;
     padding-bottom: 0px;
+    overflow: hidden;
 }
 .small-text{
     line-height: 21px;
